# template_rust_rocket_api

./: Cargo.toml  Dockerfile.debian  README.md  package.json  requests.http
src/: main.rs  tests.rs
